--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,10 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css"
     />
-    <script
+    <!-- <script
       async
       src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"
-    ></script>
+    ></script> -->
     <meta
       name="description"
       content="Web site created using create-react-app"
